tests/snapshots/diagnostics__register_missing_offset.snap
---
source: tests/diagnostics.rs
expression: output
---
error: Require an offset key.
  ┌─ fixtures/invalid/register_missing_offset.latch:1:1
  │
1 │ -- @reg name=ctrl
  │ ^^^^^^^^^^^^^^^^^ lowering error occurred here
